# mocha

./: .gitignore  3d pose estimation.md  CMakeLists.txt  readme.md  tutorial.md
include/: glad.h  stb_image_write.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
notes/: 3d pose estimation.md
shaders/: compute.glsl  converter.glsl  fragment.glsl  framebuffer_fragment.glsl  framebuffer_vertex.glsl  shared.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
src/: animator.cpp  animator.h  blazepose.h  box.h  camera.cc  camera.cpp  camera.h  convert.h  demo.cpp  engine.cpp  engine.h  ffmpeg-demo.cpp  fragment.glsl  framebuffer.h  generator.cpp  keyframes.cpp  keyframes.h  log.h  main.cc  main.cpp  model.cpp  model.h  movenet.cpp  movenet.h  pool.cpp  pool.h  shader.cc  shader.cpp  shader.h  shaders.cc  shaders.h  skybox.cpp  skybox.h  textures.cpp  textures.h  vertex.glsl  vertex.h
src/shaders/: fragment.glsl  lightFragment.glsl  lightVertex.glsl  vertex.glsl
src/shaders/default/: buffers.glsl  fragment.glsl
src/shaders/skybox/: compute.glsl  fragment.glsl
src/shaders/texture/: fragment.glsl  vertex.glsl
